# Vectras-VM-Android

./: .gitignore  1.111  33.md  Agents.md  BENCHMARK_REFACTORING_SUMMARY.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COMPILATION_FIXES.md  CONTRIBUTING.md  DOC_INDEX.md  Erro.md  FIXES_SUMMARY.md  HAJA.SH  IMPLEMENTATION_COMPLETE.md  Makefile  PRIVACY.md  PROJECT_STATE.md  PROVISIONING_REPORT_2026-04-03.md  README.md  RELEASE_NOTES.md  REPORT.md  SECURITY.md  START_HERE.md  THIRD_PARTY_NOTICES.md  TROUBLESHOOTING.md  VECTRAS_ANALYSIS_COMPLETE.md  VECTRAS_MEGAPROMPT_DOCS.md  VECTRA_CORE.md  VERSION_STABILITY.md  WIP_INTEGRACAO_MVPS.md  __init__.py  bootstrapexemplo.md  build.gradle  build_termux.sh  for.md  gradle.properties  gradlew  local.properties.example  (+8 more)
.ci/: RAFAELIA_ATLAS_DOMINIOS_ESPIRAL.md  RAFAELIA_SESSAO_COMPLETA.md  matrixbitraf.c
.github/: FUNDING.yml  WORKFLOWS.md  dependabot.yml
3dfx/: FILES_MAP.md  README.md
GAIAPHI/: BUILD_STATUS.md  README.md  rafael_divisoes.md  versao_media.md
Incluir/: 01_Rafaelia_Execucao_Saneada.docx  01_taxonomia_academica_malha_simbiotica.md  02_Paper_Base_Completo.docx  02_formalizacao_matematica_modelo_de_estados.md  03_paper_base_programa_interdisciplinar.md  09_Linha_de_Artigos.docx  11_Artigo_2_Experimental.docx  A incluir.md  APPLY_FIXES.sh  AUDIT_REPORT.json  AUDIT_REPORT.md  CODEX_PROMPT_VECTRAS_TERMUX_ARM32_CI.txt  EXECUTION_REPORT.md  FILE_ORGANIZATION.md  FIX_01_local-1.properties  FIX_02_google-services-1.json  FIX_03_sources_rmr_core-1.cmake  FIX_04_CMakeLists-1.txt  FIX_05_app_src_main_cpp_CMakeLists-1.txt  FIX_06_CMakePresets-1.json  FIX_07_rmr_unified_jni_base-1.h  Possível núcleo.md  Rafael estados.md  Rafaeltesesmd.md  Readme.md  Texto colado.txt  UNIFIED_INVARIANT_SPEC.md  _VECTRAS_REPOSITORY_OVERVIEW.md  matrix_ops (1).py  rafaelia_rigor_pipeline.py  repo_audit_and_plan.py  report.md  sessao_completa_possibilidades_e_matematica.md  sistema_minimo_invariantes (1).md  sistema_minimo_invariantes (1).xlsx  sistema_minimo_invariantes.md  sistema_minimo_invariantes.xlsx  t7_invariant_engine.py  test_repo_audit_and_plan.py  test_t7_invariant_engine.py  (+3 more)
RMR/: RAFAELIA_PERF_OPS.md  rafaelia_bitraf_core.c  rmr_bench.c  rmr_bench_suite.c  rmr_cycles.c  rmr_hw_detect.c  rmr_isorf.c
Rafaelia/: README.md  Readme.mdReadme.md  rafaelia_core.c
__DELTA__/: CMAKE_ANDROID_SNIPPET.txt  CMAKE_ROOT_SNIPPET.txt  PATCH_NOTES.md  rrrrr
_incoming/: INTEGRATION_EVIDENCE.md  RAFAELIA_MATH_FORMULAS.md  README.md  rafaelia_8way.S  rafaelia_936_fast.S  rafaelia_999_logsin.S  rafaelia_arm.c  rafaelia_arm32.c  rafaelia_avalanche_v2.S  rafaelia_bare.c  rafaelia_central_link.S  rafaelia_chrono.S  rafaelia_clock.c  rafaelia_clock_fix.c  rafaelia_final.S  rafaelia_final_bench.S  rafaelia_final_seal.S  rafaelia_flash.S  rafaelia_flow.c  rafaelia_hold.S  rafaelia_invasion.S  rafaelia_lowlevel.c  rafaelia_next.S  rafaelia_pilar.S  rafaelia_prob.S  rafaelia_ultra.c  rafaelia_vacuo.S  rafaelia_vortex.S  rmr_matrix.S  rmr_persist.S  rmr_spiral.S  rmr_test.c  termux.c
addthis/: ARKHE_DO_VERBO_VIVO_Rafael_Melo_Reis.docx  README.md  VECTRAS_BUGS.md  VECTRAS_PROBLEMS.md  VECTRAS_REALITY_DIFF.md  VECTRAS_SOLUTIONS.md  readme.md
android/: README.md  build.gradle  gradlew  gradlew.bat  settings.gradle
app/: FILES_MAP.md  FIREBASE.md  README.md  build.gradle  build.gradle.old  build.gradle.old2  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  hardware_profile_bridge.c  hardware_profile_bridge_internal.h  lowlevel_abi.c  lowlevel_abi.h  lowlevel_bridge.c  termux_bootstrap_bridge.c  vectra_core_accel.c  vectra_ll_base.h  vectra_lowlevel_backend.h  vectra_lowlevel_backend_arm64.c  vectra_lowlevel_backend_fallback.c  vectra_lowlevel_backend_x86_64.c
app/src/main/cpp/core/: sector.c  sector.h
app/src/main/cpp/core/arch/: primitives.c  primitives.h
app/src/main/cpp/core/tests/: core_benchmark_smoke.c  sector_selftest.c  sector_snapshot_42.c
archive/: FILES_MAP.md  README.md
bench/: FILES_MAP.md  README.md
bug/: 1_RAFAELIA_BITRAF64_KERNEL.md  2_DETERMINISTIC_COHERENCE_MATRIX.md  3_ZIP_DETERMINISTIC_CONTAINER.md  4_GEOMETRIC_PARITY_REDUNDANCY.md  5_OMEGA_SME_COMPRESSION_CODEC.md  ANALISE_70_METRICAS_DATACENTER.md  ANALISE_CODIGO_VECTRAS_v3.6.5.md  ANALISE_COMPLETA_8_NIVEIS_SEMANTICOS.md  ANALISE_REAL_COMPILACAO_HARDWARE.md  ANALISE_REAL_HARDWARE_COMPLETA.md  ANALISE_SO_COMPLETO_BIOS_FIRMWARE_BOOTLOADER.md  AUTOTUNE_ADAPTATIVO_REAL.md  Auditoria_RAFAELIA_VectrasVM.docx  BUGS_ENUMERATION.md  BUG_FIXES.md  BUG_FIXES_AND_PATCHES_EXACT_CODE.md  COMPARACAO_UPSTREAM_VS_OTIMIZADO.md  DEPLOYMENT_GUIDE_COMPLETO.md  EXPERIENCIA_USUARIO_IMPACTO_TRABALHO.md  FILES_MAP.md  GUIA_TECNICO_IMPLEMENTACAO_PATCHES.md  MATRIZ_T_ESPACO_ESTADOS_VERDADE.md  RAFGITTOOLS_AUDIT_REPORT.md  RAFGITTOOLS_BUG_HUNTER_v6.md  README.md  SOURCE_CODE_TRACEABILITY.md  STATUS_CORRECOES_VERIFICADAS.md  STATUS_IMPLEMENTACAO_COMPLETO.md  SUMARIO_EXECUTIVO.md  VECTRAS_ANALISE_TECNICA_DETALHADA.md  VECTRAS_CODIGO_ALEM_DOCUMENTACAO.md  VECTRAS_V7_BUG_HUNTER_55.md  VECTRAS_VM_ANDROID_BUG_REPORT.txt  VECTRAS_VM_ANDROID_CORRECTIONS.txt  VECTRAS_VM_BUG_HUNTER.md  VERDADE_CRITICA_SEM_ABSTRACCAO.md  Vectras_BugReport.md
core/: keygen.c  signature.c  unified_coherence.c  unified_coherence.h
demo_cli/: FILES_MAP.md  README.md
docs/: ABSTRACT.md  AI_BUILD_RELEASE_INDEX.md  API.md  APP_IDENTITY.md  ARCHITECTURE.md  AUDIT_CLAIMS_POLICY.md  BENCHMARKS.md  BENCHMARK_MANAGER.md  BETA_APK_ABI_BOOTSTRAP_REPORT.md  BETA_BOOTSTRAP_REALITY_CHECK.md  BETA_EXTERNAL_REFERENCE_MAP.md  BETA_NATIVE_RMR_STARTUP_STATUS.md  BETA_SHELL_LOADER_STATUS.md  BETA_STARTVM_PREFLIGHT.md  BIBLIOGRAPHY.md  BLUEPRINT_FLUXOS_VM.md  BUGFIX_REPORT.md  BUILD_ENV_ALIGNMENT.md  BUILD_REFACTOR_SCOPE.md  CODE_GEOMETRY_REALITY_2026-04-03.md  COMPILATION_PIPELINE.md  CONTRIBUTING.md  DETERMINISTIC_VM_MUTATION_LAYER.md  DOCUMENTATION_STANDARDS.md  DOCUMENTATION_SUMMARY.md  ESFERAS_METODOLOGICAS_RAFAELIA.md  FILES_MAP.md  FULLSTACK_SOURCE_MAP.md  GLOSSARY.md  IMAGES_INDEX.md  INCOMING_INGESTION_MAP.md  IP_MAP.md  (+42 more)
(+1047 files in other folders)
